--- a/index.html
+++ b/index.html
@@ -26,18 +26,17 @@
 
       <a href="https://www.instagram.com/" class="flowbtn10"><i class="fab fa-instagram"></i></a>
       <a href="https://twitter.com/home" class="flowbtn10"><i class="fab fa-twitter"></i></a>
-
+      <ul>
   <div class="site-title">
-    <img src="shiguihara.jpg" width="450" height="570" alt="プロフィール写真">
-    <span><h1>Ihara Shigu</h1></span>
-    <p>ProductDesign / Photograph</p>
+    <div class="title-text">
+    </div>
+    <h1>Ihara Shigu</h1>
+    <li>ProductDesign / Photograph</li>
+    <li>96' 5 1<br>Osaka</li>
+    <li>I'm 23 years old, and was born in japan.<br>I love design and like photography such<br>as Landscapes and architectures.</li>
   </div>
-  <div class="abouts">
-    <p>96' 5 1<br>Osaka</p>
-  </div>
-  <div class="about">
-    <p>I'm 23 years old, and was born in japan.<br>I love design and like photography such<br>as Landscapes and architectures.</p>
-  </div>
-
+      <img src="shiguihara.jpg" width="450" height="570" alt="プロフィール写真">
+</ul>
+</div>
 </body>
 </html>
