--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
     <link rel="jQuery" href="icon.js">
     <link rel="stylesheet" href="style.css">
-    <link rel="responsive" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
@@ -17,26 +16,26 @@
   <span class="fa fa-bars menu-icon"></span>
 
   <div class="button">
-      <a href="index.html">Home</a>
-      <a href="3D_modeling.html">3D Modeling</a>
-      <a href="photograph.html">Photograph</a>
+    <ul class="inner">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="3D_modeling.html">3D Modeling</a></li>
+      <li><a href="photograph.html">Photograph</a></li>
+    </ul>
   </div>
 
 </header>
 
-      <a href="https://www.instagram.com/" class="flowbtn10"><i class="fab fa-instagram"></i></a>
-      <a href="https://twitter.com/home" class="flowbtn10"><i class="fab fa-twitter"></i></a>
-      <ul>
   <div class="site-title">
     <div class="title-text">
-    </div>
+    <ul class="intro">
     <h1>Ihara Shigu</h1>
-    <li>ProductDesign / Photograph</li>
-    <li>96' 5 1<br>Osaka</li>
-    <li>I'm 23 years old, and was born in japan.<br>I love design and like photography such<br>as Landscapes and architectures.</li>
+    <li class="skills">ProductDesign / Photograph</li>
+    <li class="froms">96' 5 1<br>Osaka</li>
+    <li class="from">I'm 24 years old, and was born in japan.<br>I love design and like photography such<br>as Landscapes and architectures.</li>
+    </ul>
   </div>
-      <img src="shiguihara.jpg" width="450" height="570" alt="プロフィール写真">
-</ul>
-</div>
+     <img class="site-pic" src="shiguihara.jpg" width="450" height="570" alt="プロフィール写真">
+  </div>
+
 </body>
 </html>
