--- a/3D_Modeling.html
+++ b/3D_Modeling.html
@@ -16,22 +16,30 @@
 
   <div class="pd-works">
     <img src="untitled.227.jpg" width="540" height="360">
-    <p>Design of Headphone. Modeling Rhinoceros5.0 </p>
+    <ul>
+      <li>Design of Headphone. Modeling Rhinoceros5.0</li>
+    </ul>
   </div>
 
   <div class="pd-works">
     <img src="untitled.125.jpg" width="540" height="360">
-    <p>Stapler. Modeling Rhinoceros5.0 </p>
+        <ul>
+      <li>Stapler. Modeling Rhinoceros5.0</li>
+        </ul>
   </div>
 
     <div class="pd-works">
     <img src="IMG_101.JPG" width="540" height="360">
-    <p>Parts of Stapler. Modeling Rhinoceros5.0 </p>
+    <ul>
+      <li>Parts of Stapler. Modeling Rhinoceros5.0</li>
+        </ul>
   </div>
 
   <div class="pd-works">
     <img src="untitled.318.jpg" width="540" height="360">
-    <p>Gingko Table. Modeling Rhinoceros5.0 </p>
+    <ul>
+      <li>Gingko Table. Modeling Rhinoceros5.0</li>
+        </ul>
   </div>
 
   <div id="page_top"><a href="#"></a></div>
