--- a/photograph.html
+++ b/photograph.html
@@ -8,41 +8,56 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-
-
+<header>
+  <div class="heading">
+    <h1>Photograph</h1>
+  </div>
+  </header><!-- /header -->
 <section class="pd-pic" id="pd-pic">
-  <h2 class="heading">Photograph</h2>
+<div class="lesson">
 
   <div class="pd-works">
     <img src="IMG_2215.JPG" width="540" height="540">
-    <p>19' 2 14. In Busan </p>
+    <ul>
+      <li>19' 2 14. In Busan </li>
+    </ul>
   </div>
 
   <div class="pd-works">
     <img src="IMG_0549.JPG" width="540" height="360">
-    <p>18' 7 1. In Melbourne </p>
+    <ul>
+    <li>18' 7 1. In Melbourne</li>
+    </ul>
   </div>
 
   <div class="pd-works">
     <img src="IMG_0390.JPG" width="540" height="360">
-    <p>18' 6 3. In Sydney </p>
+    <ul>
+    <li>18' 6 3. In Sydney</li>
+    </ul>
   </div>
 
   <div class="pd-works">
     <img src="IMG_0258.JPG" width="540" height="360">
-    <p>18' 5 20. In Sydey </p>
+    <ul>
+    <li>18' 5 20. In Sydey</li>
+    </ul>
   </div>
 
   <div class="pd-works">
     <img src="2bcad9be9e035f6e-photo.JPG" width="540" height="540">
-    <p>18' 1 2. In Venice </p>
+    <ul>
+    <li>18' 1 2. In Venice</li>
+    </ul>
   </div>
 
   <div class="pd-works">
     <img src="85b03ffb60b886c7-photo.JPG" width="540" height="540">
-    <p>17' 12 28. In Copenhagen </p>
+    <ul>
+    <li>17' 12 28. In Copenhagen</li>
+    </ul>
   </div>
-
+</div>
   <div id="page_top"><a href="#"></a></div>
 
 </body>
