--- a/index.html
+++ b/index.html
@@ -2,26 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8"  />
-    <meta name=”viewport” content=”width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no”>
-    <link rel="jQuery" href="icon.js">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, shrink-to-fit=no, user-scalable=no">
+    <link rel="jQuery" href="main.js">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
-<!--ここからヘッダー-->
 <body>
 
 <header>
 
-
   <div class="button">
     <ul class="inner">
       <li><a href="index.html">Home</a></li>
-      <li><a href="3D_modeling.html">3D Modeling</a></li>
+      <li><a href="3D_Modeling.html">3D Modeling</a></li>
       <li><a href="photograph.html">Photograph</a></li>
     </ul>
-  </div>
-
+ </div>
 </header>
 
   <div class="site-title">
@@ -33,8 +29,19 @@
     <li class="from">I'm 24 years old, and was born in japan.<br>I love design and like photography such<br>as Landscapes and architectures.</li>
     </ul>
   </div>
-     <img class="site-pic" src="shiguihara.jpg" width="450" height="570" alt="プロフィール写真">
+    <div class="site-pic">
+   
+    </div>
   </div>
+  
+  
+    <div class="buttons">
+    <ul class="inner">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="3D_Modeling.html">3D Modeling</a></li>
+      <li><a href="photograph.html">Photograph</a></li>
+    </ul>
+ </div>
 
 </body>
 </html>
