--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   
   
     <div class="buttons">
-    <ul class="inner">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="3D_Modeling.html">3D Modeling</a></li>
-      <li><a href="photograph.html">Photograph</a></li>
-    </ul>
+    <div class="inners">
+      <a href="index.html">Home</a>
+      <a href="3D_Modeling.html">3D Modeling</a>
+      <a href="photograph.html">Photograph</a>
+    </div>
  </div>
 
 </body>
