--- a/3D_Modeling.html
+++ b/3D_Modeling.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8"  />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, shrink-to-fit=no, user-scalable=no">
   <link rel="stylesheet" href="3D_Modeling.css" title="modal">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 </head>
@@ -23,25 +24,29 @@
       <img class="screen-modal-data__image" src="images2/untitled.227.jpg">
       <div class="screen-modal-data__body">
         <!-- モーダルの時のHTMLをここに書く？ -->
+        <div class="modal__text">
         <ul>
-          <h1>Ihara Shigu</h1>
-          <li>ProductDesign / Photograph</li>
-          <li>96' 5 1<br>Osaka</li>
-          <li>I'm 24 years old, and was born in japan.
-            <br>I love design and like photography such<br>
-            as Landscapes and architectures.</li>
-          </ul>
+          <h1>Headphone</h1>
+          <li>Modeling Rhinoceros 5.0 / Rendering by Keyshot</li>
+          <li>creation time: 16' 2</li>
+        </ul>
+      </div>
       </div>
     </div>
-    <div>        
     </div>
-  </div>
   <div class="wrapper">
     <div>        
     </div>      
     <div class="screen-modal-data">
       <img class="screen-modal-data__image" src="images2/untitled.125.jpg">
       <div class="screen-modal-data__body">
+        <div class="modal__text">
+        <ul>
+          <h1>stapler</h1>
+          <li>Modeling Rhinoceros 5.0 / Rendering by Keyshot</li>
+          <li>creation time: 16' 2</li>
+        </ul>
+      </div>
       </div>
     </div>
   </div>
@@ -49,6 +54,13 @@
     <div class="screen-modal-data">
       <img class="screen-modal-data__image" src="images2/IMG_101.JPG">
       <div class="screen-modal-data__body">
+        <div class="modal__text">
+        <ul>
+          <h1>All stapler parts</h1>
+          <li>Modeling Rhinoceros 5.0 / Rendering by Keyshot</li>
+          <li>creation time: 16' 2</li>
+        </ul>
+      </div>
       </div>
     </div>
     <div>        
@@ -60,6 +72,13 @@
     <div class="screen-modal-data">
       <img class="screen-modal-data__image" src="images2/untitled.318.jpg">
       <div class="screen-modal-data__body">
+        <div class="modal__text">
+        <ul>
+          <h1>GINGKO TABLE</h1>
+          <li>Modeling Rhinoceros 5.0 / Rendering by Keyshot</li>
+          <li>creation time: 16' 2</li>
+        </ul>
+      </div>
       </div>
     </div>
   </div>
