--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>グリッドレイアウト</title>
-    <link rel="stylesheet" href="css/newstyle.css">
-    <link rel="stylesheet" href="css/reset.css">
+    <title>PortfolioSite</title>
+    <link rel="stylesheet" href="newstyle.css">
 </head>
 <body>
     <div class="wrapper">
