--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortfolioSite</title>
-    <link rel="stylesheet" href="newstyle.css">
+    <link rel="stylesheet" href="css/newstyle.css">
 </head>
 <body>
     <div class="wrapper">
@@ -33,15 +33,16 @@
             <img class="image" src="images2/untitled.125.jpg" alt="ホッチキス">
             <div class="category">STAPLER</div>
             <p class="description">#3D Modeling<br>#Rhinoceros<br>#Rendering<br>#Keyshot
-                <br>#ProductDesign</p>
+                <br>#Product Design</p>
         </a>
     </section>
+
     <section class="item item-pd">
         <a href="#">
             <img class="image" src="images2/IMG_101.JPG" alt="パーツ">
             <div class="category">PARTS</div>
             <p class="description">#3D Modeling<br>#Rhinoceros<br>#Rendering<br>#Keyshot
-                <br>#ProductDesign</p>
+                <br>#Product Design</p>
         </a>
     </section>
     <section class="item item-pd">
@@ -49,7 +50,7 @@
             <img class="image" src="images2/untitled.227.jpg" alt="ヘッドフォン">
             <div class="category">HEADPHONE</div>
             <p class="description">#3D Modeling<br>#Rhinoceros<br>#Rendering<br>#Keyshot
-                <br>#ProductDesign</p>
+                <br>#Product Design</p>
         </a>
     </section>
     <section class="item item-pd">
@@ -57,7 +58,18 @@
             <img class="image" src="images2/untitled.318.jpg" alt="イチョウテーブル">
             <div class="category">GINGKO TABLE</div>
             <p class="description">#3D Modeling<br>#Rhinoceros<br>#Rendering<br>#Keyshot
-                <br>#ProductDesign</p>
+                <br>#Product Design</p>
+        </a>
+    </section>
+
+    <!-- ここから動画 -->
+
+    <section class="item item-pd">
+        <a href="#">
+            <video class="image" src="images2/TAMOVIE_1.mp4" alt="PV" loop autoplay muted></video>
+            <div class="category">GINGKO TABLE</div>
+            <p class="description">#Premiere Pro<br>#Rhinoceros<br>#Rendering<br>#Keyshot
+                <br>#Edit</p>
         </a>
     </section>
 
@@ -107,6 +119,8 @@
 
     </div>
 
+
+    <!-- レンガ -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
     <script>
         new Masonry('.wrapper', {
@@ -115,5 +129,7 @@
             gutter: 4
         });
     </script>
-</body>
+    
+
+    </body>
 </html>
