--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
     </div>
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="/js/jquery.masonry.min.js"></script>
+    <script src="/js/jquery.imagesloaded.min.js"></script>
     <script>
         new Masonry('.wrapper', {
             itemSelecter: '.item',
