--- a/index.html
+++ b/index.html
@@ -112,12 +112,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="/js/jquery.masonry.min.js"></script>
     <script src="/js/jquery.imagesloaded.min.js"></script>
-    <script>
-        new Masonry('.wrapper', {
-            itemSelecter: '.item',
-            columnWidth: 180,
-            gutter: 4
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
